# talos-rbprm

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  pyproject.toml
data/talos/: package.xml
data/talos/com_inequalities/: larm_com.erom  lleg_com.erom  rarm_com.erom  rleg_com.erom
data/talos/meshes/: talos_larm_rom.dae  talos_larm_rom.stl  talos_lleg_rom.dae  talos_lleg_rom.stl  talos_lleg_rom_reduced.dae  talos_lleg_rom_reduced.stl  talos_rarm_rom.dae  talos_rarm_rom.stl  talos_rleg_rom.dae  talos_rleg_rom.stl  talos_rleg_rom_full.stl  talos_rleg_rom_reduced.dae  talos_rleg_rom_reduced.stl  talos_trunk_head.dae  talos_trunk_head.stl  talos_trunk_lower.dae  talos_trunk_lower.stl  talos_trunk_lower_large.dae  talos_trunk_lower_large.stl  talos_trunk_lower_visual.dae  talos_trunk_lower_visual_large.dae  talos_trunk_lower_visual_large_reducedROM.dae  talos_trunk_upper.dae  talos_trunk_upper.stl  talos_trunk_upper_visual.dae
data/talos/srdf/: talos_larm_rom.srdf  talos_lleg_rom.srdf  talos_rarm_rom.srdf  talos_rleg_rom.srdf  talos_trunk.srdf  talos_trunk_large.srdf
data/talos/urdf/: talos_larm_rom.urdf  talos_lleg_rom.urdf  talos_lleg_rom_reduced.urdf  talos_rarm_rom.urdf  talos_rleg_rom.urdf  talos_rleg_rom_reduced.urdf  talos_trunk.urdf  talos_trunk_large.urdf  talos_trunk_large_reducedROM.urdf
script/: admissibleComPositionsFromEffector.py  constants_and_tools.py  generateROMs.py  relativeFootPositionQuasiFlat.py
src/hpp/corbaserver/rbprm/talos/: robot.py
src/hpp/corbaserver/rbprm/talos_abstract/: robot.py
src/hpp/corbaserver/rbprm/talos_fixedUpper/: robot.py
talos_rbprm/: talos.py  talos_abstract.py  talos_fixedUpper.py
