CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(PROJECT_NAME talos-rbprm)
SET(PROJECT_DESCRIPTION "Database for talos robot using hpp-rbprm")

SET(CUSTOM_HEADER_DIR "hpp/talos-rbprm")
SET(PROJECT_USE_CMAKE_EXPORT TRUE)
SET(CXX_DISABLE_WERROR true)

INCLUDE(cmake/hpp.cmake)
INCLUDE(cmake/python.cmake)

COMPUTE_PROJECT_ARGS(PROJECT_ARGS LANGUAGES CXX)
PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})

ADD_PROJECT_DEPENDENCY(example-robot-data REQUIRED)

FINDPYTHON()

ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)


SET(CATKIN_PACKAGE_SHARE_DESTINATION
  ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME})

INSTALL(DIRECTORY
  data/talos/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
  )

STRING(REGEX REPLACE "-" "_" PY_NAME ${PROJECT_NAME})

SET(${PROJECT_NAME}_PYTHON_FILES
  __init__.py
  talos_abstract.py
  talos_fixedUpper.py
  talos.py
  )

FOREACH(SOURCE ${${PROJECT_NAME}_PYTHON_FILES})
  PYTHON_INSTALL_ON_SITE(${PY_NAME} ${SOURCE})
ENDFOREACH(SOURCE ${${PROJECT_NAME}_PYTHON_SOURCES})
