<?xml version='1.0'?>
<package format='2'>
    <name>talos-rbprm</name>
    <version>5.0.0</version>
    <description>Database for Talos robot using hpp-rbprm</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
